# trAffic-simUlator

./: CMakeLists.txt  Car.cpp  Car.h  CarPath.cpp  CarPath.h  ChangingLanePath.cpp  ChangingLanePath.h  CrossRoadPath.cpp  CrossRoadPath.h  Crossroad.cpp  Crossroad.h  CrossroadPath.cpp  CrossroadPath.h  Direction.h  Lane.cpp  Lane.h  Path.h  README.md  Road.cpp  Road.h  StraightLanePath.cpp  StraightLanePath.h  TrafficLight.cpp  TrafficLight.h  World.cpp  World.h  input.txt  main.cpp  notes.txt  project_state.txt
core/include/: Car.h  CarPath.h  Crossroad.h  CrossroadPath.h  Direction.h  Lane.h  Road.h  Side.h  TrafficLight.h  Utility.h  World.h
core/src/: Car.cpp  CarPath.cpp  Crossroad.cpp  CrossroadPath.cpp  Lane.cpp  Road.cpp  TrafficLight.cpp  Utility.cpp  World.cpp
graphics/include/: CarVisual.h  CrossroadVisual.h  RoadVisual.h  VisConsts.h  Visualizer.h  VisualizerConsts.h
graphics/src/: CarVisual.cpp  CrossroadVisual.cpp  RoadVisual.cpp  Visualizer.cpp
